# property

./: .gitignore  AGENTS.md  README.md  START_HERE.md  app.py  property_pipeline.py  pyproject.toml  render.yaml  requirements.txt
config/: settings.yaml
connectors/: __init__.py  domain.py
core/: __init__.py  finance.py  scoring.py  services.py
data/: properties.csv
docs/: architecture.md  deployment_t1b.md  formulas_and_rules.md  handoff.md  product_spec.md  schema_and_ui_contract.md
docs/reviews/: adversarial_review.md  cold_review.md
docs/tranches/: tranche_1.md  tranche_1b.md  tranche_2.md  tranche_3.md
skills/tranche-builder/: SKILL.md
storage/: __init__.py  db.py
tests/: test_db.py  test_domain_ingestion.py  test_finance.py  test_map_helpers.py  test_scoring.py  test_services.py  test_tranche_acceptance.py
tests/fixtures/: expected_outputs.json  golden_listings.csv
